[package]
name = "ashtray"
version = "0.1.0"
edition = "2021"
description = "Searches for words that are also words in piglatin"

[dependencies]
log = { version="0.4.16", features = ["release_max_level_off"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = "1.0.136"
serde_json = "1.0"
serde_derive = "1.0.136"
